# feature_tracking_and_dynamic_object_detection

./: .gitignore  CMakeLists.txt  README.md
include/: loader.hpp  motion.hpp  utils.hpp
src/: loader.cpp  main.cpp  motion.cpp  utils.cpp
